some layout bug fixing

--- a/style.css
+++ b/style.css
@@ -45,13 +45,12 @@
     padding: 0;
   }
   body {
-    max-width: 100vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    margin: auto;
-  }
-  body > {
-    width: 100%;
+    justify-content: center;
+    align-items: center;
+    overflow-x: hidden;
   }
   p {
     font-size: var(--fs-18px);
@@ -81,17 +80,49 @@
   header {
     display: flex;
     justify-content: space-between;
-    padding: 1rem;
+    align-items: center;
     z-index: 9;
+    padding: 1rem;
     width: 100%;
   }
+  button {
+    background: none;
+    border: none;
+  }
+  #nav-wrapper {
+    display: block;
+    position: fixed;
+    z-index: 99;
+    width: 90%;
+    top: calc(28px + 2rem);
+    padding: 2rem;
+    background: var(--white);
+  }
   nav {
-    display: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+  }
+  nav a {
+    text-decoration: none;
+    color: var(--grey400);
+  }
+  nav a:last-child {
+    background: var(--yellow500);
+    text-transform: uppercase;
+    color: var(--grey950);
+    padding: 1rem;
+    border-radius: 30px;
+    font-weight: 700;
+    font-family: "Fraunces";
   }
 }
 @layer hero {
   main {
     margin-top: -60px;
+    width: 100%;
   }
   .hero {
     background-image: url("./assets/images/mobile/image-header.jpg");
@@ -137,8 +168,15 @@
     margin: auto;
     text-align: center;
   }
+  .about-content h2 {
+    font-weight: 900;
+    font-size: 2rem;
+    width: 100%;
+  }
   .about-text {
     color: var(--grey400);
+    font-size: 1rem;
+    line-height: 1.5;
   }
   .about-read-more {
     text-decoration: underline;
@@ -171,6 +209,11 @@
   }
   .services-text {
     text-align: center;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+  #graphic-design h2 {
+    font-weight: 900;
   }
   #graphic-design h2,
   #graphic-text {
@@ -190,6 +233,7 @@
     justify-content: center;
     width: 100%;
     gap: 1.5rem;
+    padding: 3rem 0;
   }
   #testimonials h2 {
     color: var(--grey400);
